--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#00587a</color>
+    <color name="colorPrimaryDark">#0f3057</color>
+    <color name="colorAccent">#008891</color>
+    <color name="colorAccentLight">#e7e7de</color>
+    <color name="colorBackground">#79a3b1</color>
 </resources>
