--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -1,8 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CanvasActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.iamspd.paintcanvas.CanvasView
+        android:id="@+id/signature_canvas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="#FFFFFF" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="22dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp">
+
+            <TextView
+                style="@style/AllText"
+                android:layout_width="0dp"
+                android:layout_marginEnd="12dp"
+                android:layout_weight="1"
+                android:text="@string/thickness_pointer" />
+
+            <Spinner
+                android:id="@+id/spinThickness"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="8dp">
+
+            <TextView
+                style="@style/AllText"
+                android:layout_width="0dp"
+                android:layout_marginEnd="12dp"
+                android:layout_weight="1"
+                android:text="@string/color_select" />
+
+            <RadioGroup
+                android:id="@+id/rgColor"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/blue" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/yellow" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/red" />
+            </RadioGroup>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <Button
+        style="@style/AllButton"
+        android:layout_gravity="bottom|center"
+        android:background="@color/colorPrimary"
+        android:padding="12dp"
+        android:text="@string/clearScreen_button"
+        android:textColor="@android:color/white" />
+
+</FrameLayout>
