--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="12dp"
         android:background="@color/colorAccent"
         android:padding="12dp"
+        android:onClick="onStartDrawingClick"
         android:text="@string/button_home"
         android:textColor="@android:color/white" />
 
