--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -7,7 +7,7 @@
     tools:context=".CanvasActivity">
 
     <com.iamspd.paintcanvas.CanvasView
-        android:id="@+id/signature_canvas"
+        android:id="@+id/myCanvas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="#FFFFFF" />
@@ -29,7 +29,8 @@
                 android:layout_width="0dp"
                 android:layout_marginEnd="12dp"
                 android:layout_weight="1"
-                android:text="@string/thickness_pointer" />
+                android:text="@string/thickness_pointer"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <Spinner
                 android:id="@+id/spinThickness"
@@ -50,7 +51,8 @@
                 android:layout_width="0dp"
                 android:layout_marginEnd="12dp"
                 android:layout_weight="1"
-                android:text="@string/color_select" />
+                android:text="@string/color_select"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <RadioGroup
                 android:id="@+id/rgColor"
@@ -85,6 +87,7 @@
         android:background="@color/colorPrimary"
         android:padding="12dp"
         android:text="@string/clearScreen_button"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@android:color/white" />
 
 </FrameLayout>
