--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccentLight"
-    android:orientation="vertical"
     android:gravity="center_vertical"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         style="@style/AllText"
         android:layout_gravity="center"
         android:text="@string/title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/colorPrimaryDark" />
 
     <ImageView
@@ -24,8 +25,8 @@
         style="@style/AllButton"
         android:layout_marginTop="12dp"
         android:background="@color/colorAccent"
-        android:padding="12dp"
         android:onClick="onStartDrawingClick"
+        android:padding="12dp"
         android:text="@string/button_home"
         android:textColor="@android:color/white" />
 
