--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -79,12 +79,25 @@
 
         </LinearLayout>
 
+        <Button
+            style="@style/AllButton"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorAccentLight"
+            android:onClick="onSetPropertyClick"
+            android:padding="12dp"
+            android:text="@string/setProperties_button"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/colorPrimaryDark" />
+
     </LinearLayout>
 
     <Button
         style="@style/AllButton"
         android:layout_gravity="bottom|center"
+        android:layout_marginBottom="12dp"
         android:background="@color/colorPrimary"
+        android:onClick="onClearCanvasClick"
         android:padding="12dp"
         android:text="@string/clearScreen_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
